turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:33: error: type mismatch;
 found   : Unit
 required: Double
	allerVers(posInitX, posInitY-75)
                  ^Source:41: error: type mismatch;
 found   : Unit
 required: Double
	allerVers(posInitX, posInitY-150)
                  ^Source:49: error: type mismatch;
 found   : Unit
 required: Double
	allerVers(posInitX, posInitY-225)
                  ^